--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,39 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 
+/* to apply throughout the page whenever required */
+:root {
+    /* CSS Variables */
+    --primary-color: #1E40AF;
+}
 
 body {
     font-family: 'Montserrat', sans-serif;
 }
 
+/* container */
+
 .container {
     padding-left: 1rem;
     padding-right: 1rem;
 }
-
 .container-center{
     max-width: 600px;
     margin: auto;
+}
+
+/* links */
+
+.link {
+    text-decoration: none;
+    padding: 0.5rem 1rem;
+}
+.link-primary {
+    background-color: var(--primary-color);
+    color: white;
+    border-radius: 0.5rem;
+}
+.link-secondary {
+    color: var(--primary-color);
+    border: 1px solid var(--primary-color);
+    border-radius: 0.5rem;
 }
