--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ hr {
 
 .footer{
     background-color: var(--dark-gray);
-    padding: 2rem 1rem;
+    padding: 3rem 1rem;
     text-align: center;
     color: white;
     border-top-right-radius: 1rem;
@@ -136,5 +136,6 @@ hr {
 }
 
 .footer ul{
+    margin-top: 3rem;
     padding-inline-start: 0px ;
 }
